# aionad-add-on-bluehands

./: build.gradle  gradle.properties  settings.gradle
app/: .gitignore  AndroidManifest.xml  build.gradle.kts  proguard-rules.pro
app/jni/: Android.mk  CCustomData.cpp  CCustomData.h  CMakeLists.txt  PhotoBoxMain.cpp
app/jni/media/: CHardwareMjpegDecoder.cpp  CHardwareMjpegDecoder.h  CPipeline.cpp  CPipeline.h
app/res/layout/: fragment_demo.xml  main.xml
app/res/values/: strings.xml
app/res/xml/: device_filter.xml
app/src/assets/bluehands/: status_board.html
app/src/com/skt/aionad/addon/: AddOnBluehands.java  DemoApplication.java  GStreamerSurfaceView.java  MainActivity.java
app/src/com/skt/aionad/addon/bluehands/: CarRepairInfo.java
app/src/com/skt/aionad/addon/server/: CarRepairDto.kt  KtorServer.kt  KtorServerService.kt
app/src/com/skt/aionad/addon/utils/: ColorLogTree.java  ConfigManager.java  FileLoggingTree.java
app/src/com/skt/photobox/: DemoApplication.java  DemoFragment.java  DemoViewModel.java  GStreamerSurfaceView.java  MainActivity.java
app/src/com/skt/photobox/server/: KtorServer.kt  KtorServerService.kt
app/src/com/skt/photobox/utils/: ColorLogTree.java  JniLoggingTree.kt
app/src/com/vsh/activity/: DevicesActivity.kt
app/src/com/vsh/screens/: DeviceListViewModel.kt
conf/: aionad-add-on.config  photo-box.config
etc/run/: application-start.sh  application-stop.sh  log-display.sh  log-files-retrieval.sh  start-batch-simple.sh  start-batch.sh
etc/run/test/: car-repair-status-client.html  http-server.sh
gradle/: libs.versions.toml
libs/libausbc/: CMakeLists.txt  build.gradle.kts
libs/libausbc/src/main/java/com/jiangdg/ausbc/: MultiCameraClient.kt
libs/libausbc/src/main/java/com/jiangdg/ausbc/base/: CameraFragment.kt
libs/libausbc/src/main/java/com/jiangdg/ausbc/camera/: CameraUVC.kt
libs/libausbc/src/main/java/com/jiangdg/ausbc/encode/audio/: AudioStrategySystem.kt  AudioStrategyUAC.kt
libs/libausbc/src/main/java/com/jiangdg/ausbc/render/: RenderManager.kt
libs/libausbc/src/main/java/com/jiangdg/ausbc/render/env/: EGLEvn.kt
libs/libausbc/src/main/java/com/jiangdg/ausbc/render/internal/: AbstractFboRender.kt  AbstractRender.kt  CameraRender.kt  CaptureRender.kt  EncodeRender.kt  ScreenRender.kt
libs/libausbc/src/main/java/com/jiangdg/ausbc/utils/: CameraUtils.kt  MediaUtils.kt  OpenGLUtils.kt
libs/libausbc/src/main/java/com/jiangdg/ausbc/utils/bus/: BusKey.kt
libs/libausbc/src/main/java/com/jiangdg/ausbc/widget/: AspectRatioTextureView.kt
libs/libausbc/src/main/java/com/jiangdg/uac/: UACAudio.java  UACAudioHandler.java
libs/libausbc/src/main/java/com/jiangdg/usb/: DeviceFilter.java  GlobalUsbPermissionReceiver.java  USBMonitor.java
libs/libausbc/src/main/java/com/jiangdg/utils/: HandlerThreadHandler.java
libs/libausbc/src/main/java/com/jiangdg/uvc/: UVCCamera.java
libs/libausbc/src/main/jni/UVCCamera/: CMakeLists.txt  JniUVCCamera.cpp  UVCCamera.cpp  UVCCameraAdjustments.cpp  UVCPreviewBase.cpp  UVCPreviewBase.h  _onload.cpp
libs/libausbc/src/main/jni/UVCCamera/gstreamer/: CGstStreamSource.cpp  CGstStreamSource.h
libs/libausbc/src/main/jni/common/: CMakeLists.txt  localdefines.h
libs/libausbc/src/main/jni/common/configuration/: CConfiguration.cpp  CConfiguration.h
libs/libausbc/src/main/jni/common/log/: JniFileLogger.cpp  JniFileLogger.h  JniLogger.cpp  JniLogger.h
libs/libausbc/src/main/jni/common/monitor/: CMonitor.cpp  CMonitor.h
libs/libausbc/src/main/jni/hacks/: uvchacks.cpp
libs/libausbc/src/main/jni/libusb/libusb/: config.h  libusbi.h
